k8s/nodepad-be.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
    name: nodepad-be

spec:
    replicas: 1

    selector:
        matchLabels:
            app: nodepad-be

    template:
        metadata:
            labels:
                app: nodepad-be

        spec:
            containers:
                - name: nodepad-be
                  image: nathanvo1489/img-nodepad_be:latest
                  imagePullPolicy: Always

                  ports:
                      - containerPort: 8888

                  resources:
                      requests:
                          cpu: 400m
                          memory: 400Mi
                      limits:
                          cpu: 400m
                          memory: 400Mi

---
apiVersion: v1
kind: Service

metadata:
    name: nodepad-be-service

spec:
    type: ClusterIP

    selector:
        app: nodepad-be

    ports:
        - port: 8888
          targetPort: 8888

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: nodepad-be-ingress
    namespace: default

spec:
    ingressClassName: nginx

    tls:
        - hosts:
              - nodepad-be.nathan-vo.com
          secretName: nathan-vo.com

    rules:
        - host: nodepad-be.nathan-vo.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nodepad-be-service
                            port:
                                number: 8888
