k8s/nodepad-fe.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
    name: nodepad-fe

spec:
    replicas: 1

    selector:
        matchLabels:
            app: nodepad-fe

    template:
        metadata:
            labels:
                app: nodepad-fe

        spec:
            containers:
                - name: nodepad-fe
                  image: vulebaolong/img-nodepad_fe:latest
                  imagePullPolicy: Always

                  ports:
                      - containerPort: 3000

                  resources:
                      requests:
                          cpu: 100m
                          memory: 128Mi
                      limits:
                          cpu: 500m
                          memory: 512Mi

---
apiVersion: v1
kind: Service

metadata:
    name: nodepad-fe-service

spec:
    type: ClusterIP

    selector:
        app: nodepad-fe

    ports:
        - port: 3000
          targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: nodepad-fe-ingress
    namespace: default

spec:
    ingressClassName: nginx

    tls:
        - hosts:
              - nodepad.vulebaolong.com
          secretName: vulebaolong.com

    rules:
        - host: nodepad.vulebaolong.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nodepad-fe-service
                            port:
                                number: 3000
